Prevent horizontal overflow (Fixes #118)

--- a/web/components/home/index.sass
+++ b/web/components/home/index.sass
@@ -1,3 +1,5 @@
+body
+  overflow-x: hidden
 .homepage
   background: $gradient-purple
 
